# kitbox

./: .gitignore  .oxlintrc  .prettierrc  LICENSE  README.md  TODO.md  eslint.config.mjs  mprocs.yaml  package.json  plopfile.js  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
app/: .eslintrc-auto-import.json  .eslintrc-components.json  .gitignore  .prettierignore  .prettierrc  auto-imports.d.ts  components.d.ts  components.json  env.d.ts  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: app.css  app.d.ts  app.html  hook.server.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/lib/: ROUTES.ts
app/src/routes/: +layout.svelte  Header.svelte
apps/native/: package.json
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/web/: .eslintrc-auto-import.json  auto-imports.d.ts  components.json  eslint-reset.ps1  package.json  playwright.config.ts  remove-timestamps.ps1  svelte.config.js  tsconfig.json  tsconfig.spec.json  vite.config.ts  vitest.setup.js
apps/web/src/: app.css  app.d.ts
eslint/: configs.js  ignores.js  qa.js  stylistic.js  syntax.js  testing.js
screening/: index.html  package.json  tsconfig.json  vite.config.ts
screening/src/: main.ts  types.d.ts
scripts/: native.bacon.ps1  native.dev.ps1  web.dev.ps1  web.format.ps1  web.lint.ps1  web.test.ps1
templates/package/: package.json.hbs  tsconfig.json.hbs  tsup.config.ts.hbs  vitest.config.ts.hbs
(+29 files in other folders)
