[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = ["isolation"] }

[dependencies]
dotenvy = "0.15.7"
log = "0.4"
maplit = { version = "1.0.2" }
miette = { version = "7.2.0", features = ["fancy"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.1", features = ["isolation"] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-stronghold = "2"
window-vibrancy = "0.5.0"
winver = "1.0.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
